--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,36 @@
-pillow
-torch
-torchvision
-numpy
-scipy
-scikit-image
-tqdm
-mmdet
-mmcv
+addict==2.4.0
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+colorama==0.4.4
+cycler==0.11.0
+Cython==0.29.30
+fonttools==4.33.3
+idna==3.3
+imageio==2.19.2
+kiwisolver==1.4.2
+matplotlib==3.5.2
+mmcv==1.5.1
+mmdet==2.24.1
+networkx==2.8.2
+numpy==1.22.4
+opencv-python==4.5.5.64
+packaging==21.3
+Pillow==9.1.1
+pycocotools==2.0.4
+pyparsing==3.0.9
+python-dateutil==2.8.2
+PyWavelets==1.3.0
+PyYAML==6.0
+regex==2022.4.24
+requests==2.27.1
+scikit-image==0.19.2
+scipy==1.8.1
+six==1.16.0
+terminaltables==3.1.10
+tifffile==2022.5.4
+torch==1.11.0
+torchvision==0.12.0
+tqdm==4.64.0
+typing_extensions==4.2.0
+urllib3==1.26.9
+yapf==0.32.0
